fix positioning of arrow that indicates the submenu (context menu "Alignment" button)

--- a/src/css/handsontable.css
+++ b/src/css/handsontable.css
@@ -341,6 +341,10 @@ TextRenderer readOnly cell
   color: #777;
 }
 
+.handsontable .htSubmenu {
+  position: relative;
+}
+
 .handsontable .htSubmenu :after{
   content: '▶';
   color: #777;
